auto db mapping generater 기본 필드 추가